@startuml
'https://plantuml.com/class-diagram

interface EnemyAircraftShootStrategy{
    + shoot():List<BaseBullet>
}

class MobEnemyShoot{
    + shoot():List<BaseBullet>
}

class EliteEnemyShoot{
    - eliteShootNum:int
    - eliteDirection:int
    - elitePower:int
    + shoot():List<BaseBullet>
}

class BossEnemyShoot{
    - eliteShootNum:int
    - eliteDirection:int
    - elitePower:int
    + shoot():List<BaseBullet>
}

class EliteEnemy{
    - eliteEnemyShootStrategy:EnemyAircraftShootStrategy
    - strategy:EnemyAircraftShootStrategy
    + shoot():List<BaseBullet>
}

class BossEnemy{
    - bossEnemyShootStrategy:EnemyAircraftShootStrategy
    - strategy:EnemyAircraftShootStrategy
    + shoot():List<BaseBullet>
}

class MobEnemy{
    - mobEnemyShootStrategy:EnemyAircraftShootStrategy
    - strategy:EnemyAircraftShootStrategy
    + shoot():List<BaseBullet>
}

EnemyAircraftShootStrategy <|.. BossEnemyShoot
EnemyAircraftShootStrategy <|.. EliteEnemyShoot
EnemyAircraftShootStrategy <|.. MobEnemyShoot


EnemyAircraftShootStrategy o-- EliteEnemy
EnemyAircraftShootStrategy o-- BossEnemy
EnemyAircraftShootStrategy o-- MobEnemy
@enduml